Modified display of alerts to prevent cut off.

--- a/client/style.css
+++ b/client/style.css
@@ -10,6 +10,18 @@ a {
     font-weight: bold;
 }
 
+#alerts {
+    min-height: 30px;
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
+}
+
+.alert {
+    margin: 0px;
+    padding: 0px;
+}
+
 html, body, div {
     padding: 0px;
     margin: 0px;
@@ -35,11 +47,6 @@ body, section {
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, .1) url("./rsc/ajax-loader.gif") 50% 50% no-repeat;
-}
-
-#alerts {
-    height: 50px;
-    overflow-y: hidden;
 }
 
 .bottom, #googleBtn {
